--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -11,7 +11,10 @@
 
       <%- include('includes/messages') %>
 
-      <form action='/contato/register' method='POST'>
+      <% if(contato._id) { %>
+        <form action='/contato/edit/<%= contato._id %>' method='POST'>
+        <form action='/contato/register>' method='POST'>
+      <% } %>
         <input type='hidden' name='_csrf' value=<%= csrfToken %>>
         
         <div class="mb-3">
@@ -21,7 +24,7 @@
         
         <div class="mb-3">
           <label>Sobrenome</label>
-          <input value='<%= contato.sobrenome %>' type="text" class="form-control" name='Sobrenome'>
+          <input value='<%= contato.sobrenome %>' type="text" class="form-control" name='sobrenome'>
         </div>
 
         <div class="mb-3">
