--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -13,7 +13,8 @@
 
       <% if(contato._id) { %>
         <form action='/contato/edit/<%= contato._id %>' method='POST'>
-        <form action='/contato/register>' method='POST'>
+      <% } else { %>
+        <form action='/contato/register/' method='POST'>
       <% } %>
         <input type='hidden' name='_csrf' value=<%= csrfToken %>>
         
