--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -5,7 +5,7 @@
      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
  </script>
 
- <script src='./assets/js/bundle.js'></script>
+ <script src='/assets/js/bundle.js'></script>
  </body>
 
  </html>
