Validação de formulário

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -16,7 +16,7 @@
                     <h4>Faça seu cadastro</h4>
                     <p>Se você ainda não tem conta, preencha o formulário abaixo:</p>
                     
-                    <form action='/login/register' method='POST'>
+                    <form class='form-cadastro' action='/login/register' method='POST'>
                         <input type='hidden' name='_csrf' value=<%= csrfToken %>>
                         <div class="mb-3">
                             <label>Seu email</label>
@@ -36,7 +36,7 @@
                     <h4>Faça seu Login</h4>
                     <p>Se você já tem uma conta, faça o login abaixo:</p>
 
-                    <form action='/login/login' method='POST'>
+                    <form clss='form-login' action='/login/login' method='POST'>
                         <input type='hidden' name='_csrf' value=<%= csrfToken %>>
                         <div class="mb-3">
                             <label>Seu email</label>
